--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.6.1",
+    "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-client-session": "^0.0.8",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
