--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.6.1",
+    "ipfs-http-client": "^56.0.1",
+    "modern-react-qr-reader": "^1.0.12",
+    "qrcode": "^1.5.0",
+    "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
+    "react-client-session": "^0.0.8",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.5",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-web-qr-reader": "^1.0.4",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
