--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ethers": "^5.6.1",
     "ipfs-http-client": "^56.0.1",
     "modern-react-qr-reader": "^1.0.12",
+    "package-lock-check": "^1.1.0",
     "qrcode": "^1.5.0",
     "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
