--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "multicoin-address-validator":"^0.5.6",
+    "qrcode.react":"^1.0.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
