--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.6.1",
-    "react-pdf": "^5.7.2",
     "ipfs-http-client": "^56.0.1",
     "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
     "react-client-session": "^0.0.8",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.7.2",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "react-web-qr-reader": "^1.0.4",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
