--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "ethers": "^5.6.1",
+    "ipfs-http-client": "^56.0.2",
     "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-client-session": "^0.0.8",
